--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: emotion-tts
+    name: AdvayEmotionsTTS
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python server.py"
+    startCommand: "uvicorn server:app --host 0.0.0.0 --port $PORT"
     envVars:
-      - key: PORT
-        value: "10000"
+      - key: PYTHON_VERSION
+        value: 3.10.14
